// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic.vue 1`] = `
<template>
    <div></div>
</template>

<style lang="stylus">


font-size = 14px

body
   font font-size Arial, sans-serif
   text-color = white
   
   p
    color text-color


#logo
   position: absolute
   top: 50%
   left: 50%
   width: w = 150px
   height: h = 80px
   margin-left: -(w / 2)
   margin-top: -(h / 2)
</style>~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<template>
    <div></div>
</template>

<style lang="stylus">
font-size = 14px

body
    font font-size Arial sans-serif
    text-color = white

    p
        color text-color


#logo
    position absolute
    top 50%
    left 50%
    width: w = 150px
    height: h = 80px
    margin-left -(w / 2)
    margin-top -(h / 2)
</style>

`;

exports[`blank.vue 1`] = `
<template>
    <div></div>
</template>

<style lang="stylus">


</style>~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<template>
    <div></div>
</template>

<style lang="stylus"></style>

`;

exports[`empty.vue 1`] = `
<template>
    <div></div>
</template>

<style lang="stylus"></style>~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<template>
    <div></div>
</template>

<style lang="stylus"></style>

`;

exports[`space.vue 1`] = `
<template>
    <div></div>
</template>

<style lang="stylus">  </style>~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<template>
    <div></div>
</template>

<style lang="stylus"></style>

`;
